imperative-tests/tests/variable_checks/hex_digit_var.stderr
error: Variables names can't be lower case hexdigits
 --> $DIR/hex_digit_var.rs:6:7
  |
6 |     A{f:u8},
  |       ^

error: Instruction contains invalid variable names. See above.
 --> $DIR/hex_digit_var.rs:6:7
  |
6 |     A{f:u8},
  |       ^
